Make BookAnnotation expandable with toggle

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -6,6 +6,7 @@
   "series": "Series",
   "description": "Description",
   "readMore": "Read more",
+  "showLess": "Show less",
   "noBooksFound": "No books found",
   "username": "Username",
   "password": "Password",
