--- a/booksdump-frontend/src/locales/ru/translation.json
+++ b/booksdump-frontend/src/locales/ru/translation.json
@@ -6,6 +6,7 @@
   "series": "Серии",
   "description": "Описание",
   "readMore": "Читать далее",
+  "showLess": "Показать меньше",
   "noBooksFound": "Книги не найдены",
   "username": "Имя пользователя или email",
   "password": "Пароль",
