Add Duplicates management feature with scan functionality in AdminPanel

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -113,6 +113,24 @@
   "actions": "Actions",
   "addInvite": "Add invite",
   "users": "Users",
+  "duplicates": "Duplicates",
+  "startScan": "Start scan",
+  "scanProgress": "Scan progress",
+  "scanStatus": "Status",
+  "processedBooks": "Processed {{processed}} / {{total}}",
+  "duplicatesFound": "Duplicates found: {{count}}",
+  "scanNotStarted": "Scan has not been started yet.",
+  "scanError": "Scan failed.",
+  "duplicateGroups": "Duplicate groups",
+  "noDuplicateGroups": "No duplicate groups found.",
+  "hideDuplicates": "Hide duplicates",
+  "hideDuplicatesConfirm": "Hide all duplicates except the newest? This cannot be easily undone.",
+  "hideDuplicatesResult": "Hidden: {{hidden}}, skipped empty hashes: {{skipped}}.",
+  "hideDuplicatesError": "Failed to hide duplicates.",
+  "refresh": "Refresh",
+  "hash": "Hash",
+  "count": "Count",
+  "exampleTitles": "Example titles",
   "settings": "Settings",
   "isPublic": "Public",
   "saveChanges": "Save Changes",
