--- a/booksdump-frontend/src/locales/ru/translation.json
+++ b/booksdump-frontend/src/locales/ru/translation.json
@@ -113,6 +113,24 @@
   "actions": "Действия",
   "addInvite": "Добавить приглашение",
   "users": "Пользователи",
+  "duplicates": "Дубликаты",
+  "startScan": "Запустить сканирование",
+  "scanProgress": "Прогресс сканирования",
+  "scanStatus": "Статус",
+  "processedBooks": "Обработано {{processed}} из {{total}}",
+  "duplicatesFound": "Найдено дубликатов: {{count}}",
+  "scanNotStarted": "Сканирование еще не запускалось.",
+  "scanError": "Сканирование завершилось с ошибкой.",
+  "duplicateGroups": "Группы дубликатов",
+  "noDuplicateGroups": "Дубликаты не найдены.",
+  "hideDuplicates": "Скрыть дубликаты",
+  "hideDuplicatesConfirm": "Скрыть все дубликаты, кроме самых новых? Действие сложно отменить.",
+  "hideDuplicatesResult": "Скрыто: {{hidden}}, пропущено пустых хэшей: {{skipped}}.",
+  "hideDuplicatesError": "Не удалось скрыть дубликаты.",
+  "refresh": "Обновить",
+  "hash": "Хэш",
+  "count": "Количество",
+  "exampleTitles": "Примеры названий",
   "settings": "Настройки",
   "isPublic": "Публичная",
   "saveChanges": "Сохранить изменения",
