Add functionality to manage duplicate scan jobs: start, stop, force-stop, and retrieve active scans

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -120,7 +120,19 @@
   "processedBooks": "Processed {{processed}} / {{total}}",
   "duplicatesFound": "Duplicates found: {{count}}",
   "scanNotStarted": "Scan has not been started yet.",
+  "scanStatusLoaded": "Scan status loaded.",
+  "scanAlreadyRunning": "Scan already running.",
+  "getStatus": "Get status",
   "scanError": "Scan failed.",
+  "workers": "Workers",
+  "workersHint": "1–8, default 1",
+  "stopScan": "Stop scan",
+  "scanStopRequested": "Stop requested.",
+  "scanStopError": "Failed to stop scan.",
+  "forceStopScan": "Force stop",
+  "forceStopConfirm": "Force stop the scan? This will mark the job as failed.",
+  "scanForceStopRequested": "Force stop requested.",
+  "scanForceStopError": "Failed to force stop scan.",
   "duplicateGroups": "Duplicate groups",
   "noDuplicateGroups": "No duplicate groups found.",
   "hideDuplicates": "Hide duplicates",
