--- a/booksdump-frontend/src/locales/ru/translation.json
+++ b/booksdump-frontend/src/locales/ru/translation.json
@@ -120,7 +120,19 @@
   "processedBooks": "Обработано {{processed}} из {{total}}",
   "duplicatesFound": "Найдено дубликатов: {{count}}",
   "scanNotStarted": "Сканирование еще не запускалось.",
+  "scanStatusLoaded": "Статус сканирования получен.",
+  "scanAlreadyRunning": "Сканирование уже идет.",
+  "getStatus": "Получить статус",
   "scanError": "Сканирование завершилось с ошибкой.",
+  "workers": "Потоки",
+  "workersHint": "1–8, по умолчанию 1",
+  "stopScan": "Остановить сканирование",
+  "scanStopRequested": "Остановка запрошена.",
+  "scanStopError": "Не удалось остановить сканирование.",
+  "forceStopScan": "Принудительно остановить",
+  "forceStopConfirm": "Принудительно остановить сканирование? Задание будет помечено как failed.",
+  "scanForceStopRequested": "Принудительная остановка запрошена.",
+  "scanForceStopError": "Не удалось принудительно остановить.",
   "duplicateGroups": "Группы дубликатов",
   "noDuplicateGroups": "Дубликаты не найдены.",
   "hideDuplicates": "Скрыть дубликаты",
