Add cover preview functionality to rescan process; implement endpoint and UI updates

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -197,6 +197,7 @@
   "rescanTags": "Tags",
   "rescanNoTags": "No tags",
   "rescanCover": "Cover",
+  "rescanCoverPreview": "Cover preview",
   "rescanHasCover": "Yes",
   "rescanNoCover": "No",
   "rescanPendingId": "Pending Rescan ID",
