--- a/booksdump-frontend/src/locales/ru/translation.json
+++ b/booksdump-frontend/src/locales/ru/translation.json
@@ -197,6 +197,7 @@
   "rescanTags": "Теги",
   "rescanNoTags": "Нет тегов",
   "rescanCover": "Обложка",
+  "rescanCoverPreview": "Предпросмотр обложки",
   "rescanHasCover": "Да",
   "rescanNoCover": "Нет",
   "rescanPendingId": "ID ожидающего пересканирования",
