Implement selective field updates for book rescan approval; enhance RescanApprovalRequest and UI for field selection

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -202,5 +202,9 @@
   "rescanNoCover": "No",
   "rescanPendingId": "Pending Rescan ID",
   "rescanCompleted": "Rescan completed successfully",
-  "rescanRejected": "Rescan rejected"
+  "rescanRejected": "Rescan rejected",
+  "rescanSelectFields": "Select fields to update",
+  "selectAll": "Select all",
+  "deselectAll": "Deselect all",
+  "rescanUpdateSummary": "{{count}} of {{total}} changed fields selected"
 }
