Add BookScanning component; implement scanning functionality and integrate with admin panel

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -114,6 +114,43 @@
   "addInvite": "Add invite",
   "users": "Users",
   "duplicates": "Duplicates",
+  "bookScanning": "Scanning",
+  "bookScanStart": "Start archive scan",
+  "bookScanStatusTitle": "Scan status",
+  "bookScanStatus": "Status",
+  "bookScanRunning": "Running",
+  "bookScanIdle": "Idle",
+  "bookScanArchivesProcessed": "Archives processed: {{processed}} of {{total}}",
+  "bookScanBooksProcessed": "Books added: {{count}}",
+  "bookScanErrors": "Errors: {{count}}",
+  "bookScanCurrentArchive": "Current archive",
+  "bookScanLastBook": "Last book",
+  "bookScanStatusRefresh": "Refresh status",
+  "bookScanUnscannedRefresh": "Refresh archive list",
+  "bookScanNotStarted": "Scan has not been started yet.",
+  "bookScanStarted": "Scan started.",
+  "bookScanCompleted": "Scan completed.",
+  "bookScanAlreadyRunning": "Scan already running.",
+  "bookScanStartError": "Failed to start scan.",
+  "bookScanError": "Scan error.",
+  "bookScanUnscannedTitle": "Unscanned archives",
+  "bookScanNoUnscanned": "No unscanned archives.",
+  "bookScanArchive": "Archive",
+  "bookScanSize": "Size",
+  "bookScanFileCount": "Files",
+  "bookScanCreated": "Created",
+  "bookScanArchiveButton": "Scan",
+  "bookScanArchiveComplete": "Archive {{name}} processed.",
+  "bookScanArchiveError": "Failed to process archive {{name}}.",
+  "bookScanResetTitle": "Reset archive status",
+  "bookScanResetName": "Archive name",
+  "bookScanDeleteBooks": "Delete books from archive",
+  "bookScanResetButton": "Reset status",
+  "bookScanResetConfirm": "Reset scan status for archive {{name}}?",
+  "bookScanDeleteBooksConfirm": "Delete books from this archive? This cannot be undone.",
+  "bookScanResetSuccess": "Archive {{name}} status reset.",
+  "bookScanResetError": "Failed to reset status.",
+  "bookScanResetNameRequired": "Enter archive name to reset.",
   "startScan": "Start scan",
   "scanProgress": "Scan progress",
   "scanStatus": "Status",
