--- a/booksdump-frontend/src/locales/ru/translation.json
+++ b/booksdump-frontend/src/locales/ru/translation.json
@@ -114,6 +114,43 @@
   "addInvite": "Добавить приглашение",
   "users": "Пользователи",
   "duplicates": "Дубликаты",
+  "bookScanning": "Сканирование",
+  "bookScanStart": "Запустить сканирование архивов",
+  "bookScanStatusTitle": "Статус сканирования",
+  "bookScanStatus": "Статус",
+  "bookScanRunning": "Выполняется",
+  "bookScanIdle": "Не запущено",
+  "bookScanArchivesProcessed": "Архивов обработано: {{processed}} из {{total}}",
+  "bookScanBooksProcessed": "Книг добавлено: {{count}}",
+  "bookScanErrors": "Ошибок: {{count}}",
+  "bookScanCurrentArchive": "Текущий архив",
+  "bookScanLastBook": "Последняя книга",
+  "bookScanStatusRefresh": "Обновить статус",
+  "bookScanUnscannedRefresh": "Обновить список архивов",
+  "bookScanNotStarted": "Сканирование еще не запускалось.",
+  "bookScanStarted": "Сканирование запущено.",
+  "bookScanCompleted": "Сканирование завершено.",
+  "bookScanAlreadyRunning": "Сканирование уже идет.",
+  "bookScanStartError": "Не удалось запустить сканирование.",
+  "bookScanError": "Ошибка сканирования.",
+  "bookScanUnscannedTitle": "Непросканированные архивы",
+  "bookScanNoUnscanned": "Непросканированных архивов нет.",
+  "bookScanArchive": "Архив",
+  "bookScanSize": "Размер",
+  "bookScanFileCount": "Файлов",
+  "bookScanCreated": "Создан",
+  "bookScanArchiveButton": "Сканировать",
+  "bookScanArchiveComplete": "Архив {{name}} обработан.",
+  "bookScanArchiveError": "Не удалось обработать архив {{name}}.",
+  "bookScanResetTitle": "Сброс статуса архива",
+  "bookScanResetName": "Имя архива",
+  "bookScanDeleteBooks": "Удалить книги из архива",
+  "bookScanResetButton": "Сбросить статус",
+  "bookScanResetConfirm": "Сбросить статус архива {{name}}?",
+  "bookScanDeleteBooksConfirm": "Удалить книги этого архива? Действие нельзя отменить.",
+  "bookScanResetSuccess": "Статус архива {{name}} сброшен.",
+  "bookScanResetError": "Не удалось сбросить статус.",
+  "bookScanResetNameRequired": "Укажи имя архива для сброса.",
   "startScan": "Запустить сканирование",
   "scanProgress": "Прогресс сканирования",
   "scanStatus": "Статус",
