Add scanned archives endpoint; implement fetching and displaying scanned archive statistics

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -151,6 +151,13 @@
   "bookScanResetSuccess": "Archive {{name}} status reset.",
   "bookScanResetError": "Failed to reset status.",
   "bookScanResetNameRequired": "Enter archive name to reset.",
+  "bookScanScannedTitle": "Scanned Archives",
+  "bookScanNoScanned": "No scanned archives.",
+  "bookScanBooksCount": "Books",
+  "bookScanErrorsCount": "Errors",
+  "bookScanScannedAt": "Scanned At",
+  "bookScanTotalArchives": "Total: {{count}} archives",
+  "bookScanAutoRefresh": "Auto-refresh every 5 seconds",
   "startScan": "Start scan",
   "scanProgress": "Scan progress",
   "scanStatus": "Status",
