--- a/booksdump-frontend/src/locales/ru/translation.json
+++ b/booksdump-frontend/src/locales/ru/translation.json
@@ -151,6 +151,13 @@
   "bookScanResetSuccess": "Статус архива {{name}} сброшен.",
   "bookScanResetError": "Не удалось сбросить статус.",
   "bookScanResetNameRequired": "Укажи имя архива для сброса.",
+  "bookScanScannedTitle": "Отсканированные архивы",
+  "bookScanNoScanned": "Нет отсканированных архивов.",
+  "bookScanBooksCount": "Книги",
+  "bookScanErrorsCount": "Ошибки",
+  "bookScanScannedAt": "Дата сканирования",
+  "bookScanTotalArchives": "Всего: {{count}} архивов",
+  "bookScanAutoRefresh": "Автообновление каждые 5 секунд",
   "startScan": "Запустить сканирование",
   "scanProgress": "Прогресс сканирования",
   "scanStatus": "Статус",
