Enhance rescan functionality; initialize progress state for rescans, update progress handling via WebSocket, and improve UI feedback for scan progress

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -123,6 +123,7 @@
   "bookScanArchivesProcessed": "Archives processed: {{processed}} of {{total}}",
   "bookScanBooksProcessed": "Books added: {{count}}",
   "bookScanErrors": "Errors: {{count}}",
+  "bookScanProgress": "Progress",
   "bookScanCurrentArchive": "Current archive",
   "bookScanLastBook": "Last book",
   "bookScanStatusRefresh": "Refresh status",
