Enhance rescan progress tracking; add elapsed time calculation to WebSocket updates and update UI to display elapsed seconds during rescans

--- a/booksdump-frontend/src/locales/ru/translation.json
+++ b/booksdump-frontend/src/locales/ru/translation.json
@@ -159,6 +159,14 @@
   "bookScanScannedAt": "Дата сканирования",
   "bookScanTotalArchives": "Всего: {{count}} архивов",
   "bookScanAutoRefresh": "Автообновление каждые 5 секунд",
+  "rescanningArchive": "Пересканирование архива",
+  "rescanning": "Пересканирование",
+  "rescanProgress": "Прогресс",
+  "rescanCurrent": "Текущий",
+  "rescanBooksProcessed": "Обработано книг",
+  "rescanErrors": "Ошибки",
+  "rescanElapsedTime": "Прошло времени",
+  "rescanStarting": "Начинается пересканирование...",
   "startScan": "Запустить сканирование",
   "scanProgress": "Прогресс сканирования",
   "scanStatus": "Статус",
