--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -159,6 +159,14 @@
   "bookScanScannedAt": "Scanned At",
   "bookScanTotalArchives": "Total: {{count}} archives",
   "bookScanAutoRefresh": "Auto-refresh every 5 seconds",
+  "rescanningArchive": "Rescanning Archive",
+  "rescanning": "Rescanning",
+  "rescanProgress": "Progress",
+  "rescanCurrent": "Current",
+  "rescanBooksProcessed": "Books Processed",
+  "rescanErrors": "Errors",
+  "rescanElapsedTime": "Elapsed Time",
+  "rescanStarting": "Starting rescan...",
   "startScan": "Start scan",
   "scanProgress": "Scan progress",
   "scanStatus": "Status",
