Add endpoints for retrieving scan errors and downloading error files; enhance error handling in scan process

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -152,6 +152,17 @@
   "bookScanResetSuccess": "Archive {{name}} status reset.",
   "bookScanResetError": "Failed to reset status.",
   "bookScanResetNameRequired": "Enter archive name to reset.",
+  "bookScanErrorsTitle": "Scan errors",
+  "bookScanErrorsRefresh": "Refresh errors",
+  "bookScanNoErrors": "No errors.",
+  "bookScanErrorsSelect": "Failed file",
+  "bookScanErrorsSelectPlaceholder": "Select a file",
+  "bookScanErrorArchive": "Archive",
+  "bookScanErrorFile": "File",
+  "bookScanErrorMessage": "Error",
+  "bookScanErrorTime": "Time",
+  "bookScanErrorDownload": "Download file",
+  "bookScanErrorDownloadError": "Failed to download file.",
   "bookScanScannedTitle": "Scanned Archives",
   "bookScanNoScanned": "No scanned archives.",
   "bookScanBooksCount": "Books",
