--- a/booksdump-frontend/src/locales/ru/translation.json
+++ b/booksdump-frontend/src/locales/ru/translation.json
@@ -152,6 +152,17 @@
   "bookScanResetSuccess": "Статус архива {{name}} сброшен.",
   "bookScanResetError": "Не удалось сбросить статус.",
   "bookScanResetNameRequired": "Укажи имя архива для сброса.",
+  "bookScanErrorsTitle": "Ошибки при сканировании",
+  "bookScanErrorsRefresh": "Обновить ошибки",
+  "bookScanNoErrors": "Ошибок нет.",
+  "bookScanErrorsSelect": "Файл с ошибкой",
+  "bookScanErrorsSelectPlaceholder": "Выбери файл",
+  "bookScanErrorArchive": "Архив",
+  "bookScanErrorFile": "Файл",
+  "bookScanErrorMessage": "Ошибка",
+  "bookScanErrorTime": "Время",
+  "bookScanErrorDownload": "Скачать файл",
+  "bookScanErrorDownloadError": "Не удалось скачать файл.",
   "bookScanScannedTitle": "Отсканированные архивы",
   "bookScanNoScanned": "Нет отсканированных архивов.",
   "bookScanBooksCount": "Книги",
