Add author and series search functionality in admin panel

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -239,6 +239,12 @@
   "publicationDate": "Publication date",
   "dateFormatHint": "Format: YYYY-MM-DD or YYYY",
   "languageCodeHint": "Two-letter language code (e.g., en, ru, uk)",
+  "authorsSearchOrCreate": "Search or add authors",
+  "authorsEditHint": "Start typing to search existing authors, press Enter to add a new one.",
+  "seriesSearchOrCreate": "Search or add series",
+  "seriesEditHint": "Start typing to search existing series, press Enter to add a new one.",
+  "seriesNumber": "Series number",
+  "seriesNumberHint": "You can set a number for each series or leave it empty.",
   "noAuthors": "No authors",
   "noSeries": "No series",
   "authorsEditingNotImplemented": "Editing authors is not yet implemented",
