--- a/booksdump-frontend/src/locales/ru/translation.json
+++ b/booksdump-frontend/src/locales/ru/translation.json
@@ -239,6 +239,12 @@
   "publicationDate": "Дата публикации",
   "dateFormatHint": "Формат: ГГГГ-ММ-ДД или ГГГГ",
   "languageCodeHint": "Двухбуквенный код языка (например, en, ru, uk)",
+  "authorsSearchOrCreate": "Найти или добавить автора",
+  "authorsEditHint": "Начните вводить, чтобы найти автора, Enter — чтобы добавить нового.",
+  "seriesSearchOrCreate": "Найти или добавить серию",
+  "seriesEditHint": "Начните вводить, чтобы найти серию, Enter — чтобы добавить новую.",
+  "seriesNumber": "Номер в серии",
+  "seriesNumberHint": "Можно указать номер для каждой серии или оставить пустым.",
   "noAuthors": "Нет авторов",
   "noSeries": "Нет серий",
   "authorsEditingNotImplemented": "Редактирование авторов пока не реализовано",
