Add book cover upload functionality in admin panel

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -239,6 +239,14 @@
   "publicationDate": "Publication date",
   "dateFormatHint": "Format: YYYY-MM-DD or YYYY",
   "languageCodeHint": "Two-letter language code (e.g., en, ru, uk)",
+  "cover": "Cover",
+  "chooseCover": "Choose cover",
+  "noCoverSelected": "No file selected",
+  "uploadCover": "Upload cover",
+  "uploading": "Uploading...",
+  "coverUploadSuccess": "Cover uploaded successfully",
+  "coverUploadError": "Failed to upload cover",
+  "coverUploadHint": "Upload a JPG or PNG file to replace the poster.",
   "authorsSearchOrCreate": "Search or add authors",
   "authorsEditHint": "Start typing to search existing authors, press Enter to add a new one.",
   "seriesSearchOrCreate": "Search or add series",
