--- a/booksdump-frontend/src/locales/ru/translation.json
+++ b/booksdump-frontend/src/locales/ru/translation.json
@@ -239,6 +239,14 @@
   "publicationDate": "Дата публикации",
   "dateFormatHint": "Формат: ГГГГ-ММ-ДД или ГГГГ",
   "languageCodeHint": "Двухбуквенный код языка (например, en, ru, uk)",
+  "cover": "Постер",
+  "chooseCover": "Выбрать постер",
+  "noCoverSelected": "Файл не выбран",
+  "uploadCover": "Загрузить постер",
+  "uploading": "Загрузка...",
+  "coverUploadSuccess": "Постер успешно загружен",
+  "coverUploadError": "Не удалось загрузить постер",
+  "coverUploadHint": "Загрузите JPG или PNG, чтобы заменить постер.",
   "authorsSearchOrCreate": "Найти или добавить автора",
   "authorsEditHint": "Начните вводить, чтобы найти автора, Enter — чтобы добавить нового.",
   "seriesSearchOrCreate": "Найти или добавить серию",
