Add error handling for book downloads and enhance conversion state management

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -163,6 +163,12 @@
   "bookScanErrorTime": "Time",
   "bookScanErrorDownload": "Download file",
   "bookScanErrorDownloadError": "Failed to download file.",
+  "downloadErrorTitle": "Download error",
+  "downloadErrorNotFound": "File not found.",
+  "downloadErrorForbidden": "Access denied.",
+  "downloadErrorUnauthorized": "Please sign in to download this file.",
+  "downloadErrorNetwork": "Network error. Please try again.",
+  "downloadErrorUnknown": "Could not download the file.",
   "bookScanScannedTitle": "Scanned Archives",
   "bookScanNoScanned": "No scanned archives.",
   "bookScanBooksCount": "Books",
