--- a/booksdump-frontend/src/locales/ru/translation.json
+++ b/booksdump-frontend/src/locales/ru/translation.json
@@ -163,6 +163,12 @@
   "bookScanErrorTime": "Время",
   "bookScanErrorDownload": "Скачать файл",
   "bookScanErrorDownloadError": "Не удалось скачать файл.",
+  "downloadErrorTitle": "Ошибка скачивания",
+  "downloadErrorNotFound": "Файл не найден.",
+  "downloadErrorForbidden": "Доступ запрещен.",
+  "downloadErrorUnauthorized": "Войдите, чтобы скачать файл.",
+  "downloadErrorNetwork": "Сетевая ошибка. Повторите попытку.",
+  "downloadErrorUnknown": "Не удалось скачать файл.",
   "bookScanScannedTitle": "Отсканированные архивы",
   "bookScanNoScanned": "Нет отсканированных архивов.",
   "bookScanBooksCount": "Книги",
