Add GenresList component to display genres in BooksList.

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -297,5 +297,8 @@
   "fixScanBooksUpdated": "Books updated: {{count}}",
   "fixScanErrors": "Errors: {{count}}",
   "fixScanCompleted": "Fix scan completed. Updated {{updated}} of {{total}} books.",
-  "fixScanAlreadyRunning": "Fix scan already running."
+  "fixScanAlreadyRunning": "Fix scan already running.",
+  "genres": "Genres",
+  "noGenres": "No genres",
+  "routeByGenre.books": "Search by genre"
 }
