Add bot token and date joined fields to user model; implement health check for bots

--- a/booksdump-frontend/src/locales/en/translation.json
+++ b/booksdump-frontend/src/locales/en/translation.json
@@ -309,5 +309,27 @@
   "genreTitleUpdated": "Genre title updated",
   "generatingTitles": "Generating titles...",
   "titlesGenerated": "Generated {{count}} titles",
-  "searchGenres": "Search genres"
+  "searchGenres": "Search genres",
+  "profileSection.personalData": "Personal data",
+  "profileSection.telegramBot": "Telegram bot",
+  "profileSection.security": "Security",
+  "telegramBot.connected": "Connected",
+  "telegramBot.notConfigured": "Not configured",
+  "telegramBot.tokenPlaceholder": "Paste token from @BotFather",
+  "telegramBot.tokenHint": "Create a bot via <botfather>@BotFather</botfather> and paste the token.",
+  "telegramBot.instructionToggle": "Detailed instructions",
+  "telegramBot.step1": "Open <botfather>@BotFather</botfather> in Telegram",
+  "telegramBot.step2": "Send /newbot",
+  "telegramBot.step3": "Choose a name and username (must end with bot)",
+  "telegramBot.step4": "Copy the token from the reply and paste it above",
+  "telegramBot.startHint": "Send /start to your bot in Telegram to link your account.",
+  "telegramBot.setToken": "OK",
+  "telegramBot.removeToken": "Remove token",
+  "telegramBot.tokenSet": "Bot token set",
+  "telegramBot.tokenRemoved": "Bot token removed",
+  "telegramBot.tokenError": "Error setting token",
+  "telegramBot.removeError": "Error removing token",
+  "memberSince": "Member since: {{date}}",
+  "profileSaved": "Profile saved",
+  "profileSaveError": "Error saving profile"
 }
