--- a/booksdump-frontend/src/locales/ru/translation.json
+++ b/booksdump-frontend/src/locales/ru/translation.json
@@ -309,5 +309,27 @@
   "genreTitleUpdated": "Название жанра обновлено",
   "generatingTitles": "Генерация названий...",
   "titlesGenerated": "Сгенерировано {{count}} названий",
-  "searchGenres": "Поиск жанров"
+  "searchGenres": "Поиск жанров",
+  "profileSection.personalData": "Личные данные",
+  "profileSection.telegramBot": "Telegram бот",
+  "profileSection.security": "Безопасность",
+  "telegramBot.connected": "Подключён",
+  "telegramBot.notConfigured": "Не настроен",
+  "telegramBot.tokenPlaceholder": "Вставьте токен от @BotFather",
+  "telegramBot.tokenHint": "Создайте бота через <botfather>@BotFather</botfather> и вставьте токен.",
+  "telegramBot.instructionToggle": "Подробная инструкция",
+  "telegramBot.step1": "Откройте <botfather>@BotFather</botfather> в Telegram",
+  "telegramBot.step2": "Отправьте /newbot",
+  "telegramBot.step3": "Придумайте имя и username (должен заканчиваться на bot)",
+  "telegramBot.step4": "Скопируйте токен из ответа и вставьте выше",
+  "telegramBot.startHint": "Напишите боту /start в Telegram, чтобы привязать аккаунт.",
+  "telegramBot.setToken": "OK",
+  "telegramBot.removeToken": "Удалить токен",
+  "telegramBot.tokenSet": "Бот-токен установлен",
+  "telegramBot.tokenRemoved": "Бот-токен удалён",
+  "telegramBot.tokenError": "Ошибка установки токена",
+  "telegramBot.removeError": "Ошибка удаления токена",
+  "memberSince": "Участник с: {{date}}",
+  "profileSaved": "Профиль сохранён",
+  "profileSaveError": "Ошибка сохранения профиля"
 }
